[package]
name = "figtree_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
eframe = { version = "0.32", default-features = false, features = ["default_fonts", "wgpu"] }
rfd = "0.15"
log = "0.4"
env_logger = "0.11"
phylotree = "0.1.3"
wgpu = { version = "25", default-features = false, features = ["metal"] }
winit = "0.29"