[package]
name = "rhaetree"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rhaeTree"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "wgpu"] }
rfd = "0.15"
log = "0.4"
env_logger = "0.11"
phylotree = "0.1.3"
wgpu = { version = "27", default-features = false, features = ["metal"] }
image = { version = "0.25", features = ["png", "jpeg"] }
svg = "0.18"
printpdf = { version = "0.7", features = ["embedded_images", "svg"] }
font-kit = "0.14"
tiny-skia = "0.11"
fontdue = "0.9"
vello = "0.7"
pollster = "0.4"
cairo-rs = { version = "0.20", features = ["pdf"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-app-kit = "0.2.2"
objc2-foundation = "0.2.2"
